[metadata]
name = pytorch-glow
version = 0.0.1
author = Alex McKinney
author_email = alexander.f.mckinney@durham.ac.uk
description = PyTorch implementation of Glow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vvvm23/glow
keywords = artificial intelligence, deep learning, pytorch, generative models
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    torch
python_requires = >=3.7

[options.packages.find]
exclude = 
    config
    data.py
    main.py
